<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    android:orientation="horizontal"
    android:padding="5dip" >

    <!--  listrow  -->
    <LinearLayout android:id="@+id/thumbnail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dip"
        android:orientation="vertical">

        <!-- nombre de una tarea -->
        <TextView
            android:id="@+id/list_row_title_tarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#040404"
            android:typeface="sans"
            android:textSize="18sp"/>

        <!-- duración de una tarea -->
        <TextView
            android:id="@+id/list_row_duracion_tarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/duracion"
            android:textColor="#040404"
            android:textSize="18sp"/>
    </LinearLayout>

    <!-- Botón play de una tarea -->
    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:clickable="true"
        android:focusable="false"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp"
        android:elevation="5dp"
        android:id="@+id/play_button"
        android:layout_marginEnd="23dp"
        android:background="@drawable/borde_redondo"
        android:contentDescription="@string/imagen_play"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/thumbnail2" />


</RelativeLayout>
