<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="timetracker.app.practicads.com.timetracker.EditarActivity">


    <LinearLayout
        android:id="@+id/edit_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nombre"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/editDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_descripcion"
                android:inputType="textMultiLine"
                android:maxLines="10"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:text="@string/button_guardar"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:id="@+id/buttonGuardar"
        android:background="@drawable/borde_redondo_button"
        android:layout_marginTop="78dp"
        android:layout_below="@+id/edit_form"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
