<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nueva_actividad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="timetracker.app.practicads.com.timetracker.NuevaActividad">


    <!--<RadioGroup
        android:id="@+id/radioActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioTarea">
        <RadioButton
            android:text="@string/radio_tarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioTarea" />

        <RadioButton
            android:text="@string/radio_proyecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:id="@+id/radioProyecto" />
    </RadioGroup>-->

    <Spinner
        android:id="@+id/spinnerNuevaActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tipo_actividad" />

    <LinearLayout
        android:id="@+id/nueva_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/spinnerNuevaActividad"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nombre"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_descripcion"
                android:inputType="textMultiLine"
                android:maxLines="10"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:text="@string/button_aceptar"
        android:textColor="#ffff"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/buttonAceptar"
        android:background="@drawable/borde_redondo_button"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/nueva_form"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
